# fastapi-sync-vs-async

./: .gitignore  README.md  analyze_results.py  embed_data.py  load-test-dashboard.html  pyproject.toml  resource_monitor.py  run_load_tests.sh
app/: __init__.py  background.py  functions.py  logging_config.py  main.py  metrics.py  routes.py
docs/: async-route-async-inner-async-bg-async-task-100users_stats_history.csv  async-route-async-inner-async-bg-async-task-10users_resources.csv  async-route-async-inner-async-bg-async-task-10users_stats.csv  async-route-async-inner-async-bg-async-task-40users.html  async-route-async-inner-async-bg-async-task-40users_stats.csv  async-route-async-inner-async-bg-async-task-40users_stats_history.csv  async-route-async-inner-async-bg-sync-task-100users_resources.csv  async-route-async-inner-async-bg-sync-task-40users_stats_history.csv  async-route-async-inner-sync-bg-sync-task-100users.html  async-route-async-inner-sync-bg-sync-task-100users_stats.csv  async-route-async-inner-sync-bg-sync-task-10users.html  async-route-async-inner-sync-bg-sync-task-10users_stats.csv  async-route-async-inner-sync-bg-sync-task-10users_stats_history.csv  async-route-async-inner-sync-bg-sync-task-40users.html  async-route-async-inner-sync-bg-sync-task-40users_stats.csv  async-route-sync-inner-async-bg-async-task-100users.html  async-route-sync-inner-async-bg-async-task-10users.html  async-route-sync-inner-async-bg-async-task-40users.html  async-route-sync-inner-async-bg-async-task-40users_stats.csv  index.html  (+21 more)
results/: index.html  (+41 more)
tests/: __init__.py  (+1 more)
(+2 files in other folders)
