[tool.poetry]
name = "fastapi-sync-vs-async"
version = "0.1.0"
description = "Demonstration of FastAPI sync/async route behaviors"
authors = ["Sergei S"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
locust = "^2.32.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
